<resources>
    <string name="app_name">TTA</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_screens_login">ScreensLogin</string>
    <string name="title_activity_screens_base">ScreensBase</string>


    <string name="login">login</string>
    <string name="User">User</string>
    <string name="Password">Password</string>



    <string name="title_activity_screen_menu">ScreenMenu</string>
    <string name="NEW_TEST">NEW TEST</string>
    <string name="NEW_EXERCISE">NEW EXERCISE</string>
    <string name="TRACING">TRACING</string>



    <string name="title_activity_screen_exercise">ScreenExercise</string>
    <string name="UP_IMAGE">UP IMAGE</string>
    <string name="MAKING_PHOTO">MAKING PHOTO</string>
    <string name="AUDIO_RECORDING">AUDIO RECORDING</string>
    <string name="VIDEO_RECORDING">VIDEO RECORDING</string>

    <string name="title_activity_screen_test">ScreenTest</string>

    <string name="SEND">SEND</string>

    <string name="OK">OK</string>
    <string name="FAIL">FAIL</string>

    <string name="no_camera">no camera</string>
    <string name="no_app_camera">no app camera</string>
    <string name="no_microphone">no microphone</string>
    <string name="no_app_microphone">no app microphone</string>



</resources>
