<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context="eus.ehu.intel.tta.tta.Screens.ScreensExercise"
    android:orientation="vertical">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/User"
        android:layout_gravity="center_horizontal"
        />
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/UP_IMAGE"
        android:id="@+id/screen_exercise_button_up_image"
        android:layout_gravity="center_horizontal" />
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/MAKING_PHOTO"
        android:id="@+id/screen_exercise_button_making_photo"
        android:layout_gravity="center_horizontal" />
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/AUDIO_RECORDING"
        android:id="@+id/screen_exercise_button_audio_recording"
        android:layout_gravity="center_horizontal" />
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/VIDEO_RECORDING"
        android:id="@+id/screen_exercise_button_video_recording"
        android:layout_gravity="center_horizontal" />
</LinearLayout>
